# stock-racetrack

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
blog/: index.html
blog/archive/2025/: index.html
blog/category/data/: index.html
blog/category/design/: index.html
blog/category/implementation/: index.html
blog/category/philosophy/: index.html
blog/category/research/: index.html
docs/: index.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: CAT.md  data.md  downloader.md  pyramid.md  srt-dataformat.md  trading-research.md
docs/blog/posts/designs/: .meta.yml  downloader.md  general-data-maintainance-tool.md  product.md  system.md
docs/blog/posts/investments/: .meta.yml  Oligarchy.md  (+2 more)
docs/draws/: design.drawio
docs/stylesheets/: extra.css
scripts/docs/: init.zsh
search/: search_index.json
src/srt/: __init__.py  check.py  config.py
src/srt/cli/: __init__.py  cli.py  config.py
src/srt/datasource/: __init__.py  cli.py  data.py  datasource.py  dbtools.py  downloader.py  storage.py  tables.py  utils.py
src/srt/demo/: __init__.py
src/srt/downloader/: dbtools.py  downloader.py  tracker.py  utils.py
src/srt/monitor/: __init__.py  consultants.py  monitors.py  publishers.py
src/srt/strategy/: cli.py  pyramid.py
srt/: __init__.py
srt/cli/: __init__.py
srt/downloader/: __init__.py  dbtools.py  tracker.py  updaters.py
srt/downloader/cli/: __init__.py
tests/srt/datasource/: test_db.py  test_storage.py
(+36 files in other folders)
